// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sieveSlowTests works 1`] = `
{
  "filteredTests": [],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 2`] = `
{
  "filteredTests": [],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 3`] = `
{
  "filteredTests": [
    "keepme",
  ],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 4`] = `
{
  "filteredTests": [
    "keepme",
  ],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 5`] = `
{
  "filteredTests": [
    "foo.test",
    "bar.test",
    "baz.test",
    "yup.test",
    "nope.test",
    "bonk.test",
    "bop.test",
    "ouch.test.ts",
  ],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 6`] = `
{
  "filteredTests": [
    "foo.test",
    "bar.test",
    "baz.test",
    "yup.test",
    "nope.test",
    "bonk.test",
    "bop.test",
    "ouch.test.ts",
  ],
  "slowTests": [],
}
`;

exports[`sieveSlowTests works 7`] = `
{
  "filteredTests": [
    "foo.test",
    "bar.test",
    "baz.test",
    "yup.test",
    "nope.test",
    "bonk.test",
    "bop.test",
  ],
  "slowTests": [
    "ouch.test.ts",
  ],
}
`;

exports[`sieveSlowTests works 8`] = `
{
  "filteredTests": [
    "foo.test",
    "bar.test",
    "baz.test",
    "yup.test",
    "nope.test",
  ],
  "slowTests": [
    "bonk.test",
    "bop.test",
    "ouch.test.ts",
  ],
}
`;
